WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
187378
REGRESSION(
r233496
): macOS Sierra hits debug assertions in TrackListBase::suspend
https://bugs.webkit.org/show_bug.cgi?id=187378
Summary
REGRESSION(r233496): macOS Sierra hits debug assertions in TrackListBase::sus...
Ryosuke Niwa
Reported
2018-07-05 22:01:39 PDT
We're seeing debug assertion failures in TrackListBase::suspend after
r233496
.
Attachments
Fixes the bug
(5.57 KB, patch)
2018-07-05 23:20 PDT
,
Ryosuke Niwa
eric.carlson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2018-07-05 22:02:34 PDT
<
rdar://problem/41878885
>
Radar WebKit Bug Importer
Comment 2
2018-07-05 22:02:51 PDT
<
rdar://problem/41878897
>
Ryosuke Niwa
Comment 3
2018-07-05 23:20:38 PDT
Created
attachment 344404
[details]
Fixes the bug
Ryosuke Niwa
Comment 4
2018-07-05 23:22:49 PDT
Wow, that was very timely review. Thanks!
Ryosuke Niwa
Comment 5
2018-07-06 00:37:52 PDT
Committed
r233571
: <
https://trac.webkit.org/changeset/233571
>
Ryosuke Niwa
Comment 6
2018-07-06 19:10:30 PDT
***
Bug 187371
has been marked as a duplicate of this bug. ***
Chris Dumez
Comment 7
2018-07-24 16:13:28 PDT
Reverted
r233496
and
r233571
for reason: Likely cause of <
rdar://problem/42160890
> and <
rdar://problem/42329658
> as ActiveDOMObjects can now be constructed / destroyed while we are iterating over them. Committed
r234177
: <
https://trac.webkit.org/changeset/234177
>
Ryosuke Niwa
Comment 8
2018-07-31 19:08:57 PDT
Relanded in
https://trac.webkit.org/changeset/234374/webkit
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug