REGRESSION(r233496): macOS Sierra hits debug assertions in TrackListBase::suspend https://bugs.webkit.org/show_bug.cgi?id=187378 <rdar://problem/41878885>

Reviewed by Eric Carlson.

These assertions were wrong since inline debugger, alert, etc... can suspend active DOM objects without
calling canSuspendForDocumentSuspension. Fixed the bug by removing the assertion and instead suspending
and resuming the generic event queue.

* Modules/mediasource/MediaSource.cpp:
(WebCore::MediaSource::suspend):
(WebCore::MediaSource::resume):
* Modules/mediasource/SourceBuffer.cpp:
(WebCore::SourceBuffer::suspend):
(WebCore::SourceBuffer::resume):
* Modules/mediasource/SourceBufferList.cpp:
(WebCore::SourceBufferList::suspend):
(WebCore::SourceBufferList::resume):
* html/track/TrackListBase.cpp:
(WebCore::TrackListBase::suspend):
(WebCore::TrackListBase::resume):


Canonical link: https://commits.webkit.org/202643@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233571 268f45cc-cd09-0410-ab3c-d52691b4dbfc